backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: endgame-svc-account
      containers:
      - name: backend
        image: ${BACKEND_IMAGE}
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 250m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 250Mi
        volumeMounts:
        - name: secret-volume
          mountPath: "/mnt/secrets"
      volumes:
      - name: secret-volume
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: test-k8s-secrets
